# web3-vulnerabilities

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  next.config.mjs  package-lock.json  package.json  requirements.txt  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/blog/: page.tsx
app/blog/idor-vulnerabilities/: page.tsx
app/blog/ssrf-case-study/: page.tsx
app/blog/ssrf-in-rust/: page.tsx
app/blog/time-fun-incident/: page.tsx
app/documentation/: page.tsx
app/lab1/: page.tsx
app/lab1/fixed/: page.tsx
app/lab1/vulnerable/: page.tsx
app/lab2/: page.tsx
app/lab2/fixed/: page.tsx
app/lab2/vulnerable/: page.tsx
components/: footer.tsx  navbar.tsx
lab2/: Cargo.toml  README.md  docker-compose.yml
lab2/fixed/: Cargo.toml
lab2/fixed/src/: main.rs
lab2/vulnerable/: Cargo.toml
lab2/vulnerable/src/: main.rs
routes/: lab1.py  lab2.py
