[package]
name = "web3-security-lab2"
version = "0.1.0"
edition = "2021"
authors = ["Web3 Security Labs"]
description = "SSRF Vulnerability in NFT Metadata Fetcher"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.4.0"
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
    "vulnerable",
    "fixed",
]
