[package]
name = "web3-security-lab2-vulnerable"
version = "0.1.0"
edition = "2021"
authors = ["Web3 Security Labs"]
description = "Vulnerable SSRF Example in NFT Metadata Fetcher"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
